Avoid bad wrap

--- a/readable_theme/static/css/style.css
+++ b/readable_theme/static/css/style.css
@@ -175,7 +175,6 @@ ul.sidebar.navbar-nav {
 
 
 .sitemap span {
-    padding: 5px;
     font-size: 12px;
 }
 
